# py-auth-service

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: b31a7cc545b2_create_users_table.py
src/: db.py  main.py  redis_client.py
src/auth/: router.py  validator.py
src/auth/services/: auth_service.py  jwt_service.py  password_hash.py
src/common/dependencies/: authenticate.py  rate_limiter.py
src/user/: repository.py  router.py  service.py  validator.py
